# gc_bridge

./: README.md
gc_msgs/: CMakeLists.txt  package.xml
gc_msgs/srv/: RequestAnnotations.srv
gc_vision_bridge/: CMakeLists.txt  package.xml  setup.py
gc_vision_bridge/env-hooks/: 25.gc-vision-bridge.sh.em
gc_vision_bridge/scripts/: srv_client.py  srv_server.py  test.py  test_label.py
gc_vision_bridge/src/gc_vision_bridge/: __init__.py  bridge.py  bridge_ros.py  features.py
gc_vision_bridge/tests/: test.py  test_face.py  test_label.py  test_landmark.py  test_text.py
google_cloud_vision_bridge/: CMakeLists.txt  package.xml  setup.py
google_cloud_vision_bridge/scripts/: test.py
google_cloud_vision_bridge/src/google_cloud_vision_bridge/: bridge.py
